--- a/index.html
+++ b/index.html
@@ -5,9 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Interno</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css" integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    
+    <header>
+        <a href="Interno"></a>
+        <nav>
+            <ul>
+                <li><a href="Home"></a></li>
+                <li><a href="About Us"></a></li>
+                <li><a href="Services"></a></li>
+                <li><a href="Pages"></a></li>
+                <li><a href="Contact Us"></a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section>
+         <h1>Let's Create Your Dream Interior</h1>
+         <p>The world needs innovators and problem solvers who turn</p>
+         <p>challenges into greater opportunities.</p>
+         <button type="button">Get Started</button>
+        </section>
+    </main>
 </body>
 </html>
