--- a/index.html
+++ b/index.html
@@ -23,11 +23,59 @@
     </header>
     <main>
         <section>
-         <h1>Let's Create Your Dream Interior</h1>
-         <p>The world needs innovators and problem solvers who turn</p>
-         <p>challenges into greater opportunities.</p>
-         <button type="button">Get Started</button>
+        </ul>
+        <li><h1>Let's Create Your Dream Interior</h1></li>
+         <li><p>The world needs innovators and problem solvers who turn</p></li>
+         <li><p>challenges into greater opportunities.</p></li>
+         <li> <button type="button">Get Started</button></li>
+        </ul>
         </section>
+        <section>
+            <ul>
+                    <li><h2>Interior Design</h2></li>
+                    <li><p>Enhancing the interior to achieve a healthier environment for the people using right space.</p></li>
+                    <li><button type="button">View More</button></li>
+            </ul>
+            <ul>
+                    <li><h2>Furniture</h2></li>
+                    <li><p>Movable articles that are used to make a room or building suitable for living or working.</p></li>
+                    <li><button type="button">View More</button></li>
+            </ul>
+            <ul>
+                    <li><h2>Flooring</h2></li>
+                    <li><p>Thin object any finished material applied over a floor structure to provide a walking surface.</p></li>
+                    <li><button type="button">View More</button></li>
+            </ul>
+        </section>
+        <section>
+            <ul>
+            <li><h2>We Tackle The Most Challenging Designs</h2></li>
+            <li><p>The world needs innovators and problem solvers who turn challenges into greater opportunities. We have</p></li>
+            <li><p>an insatiable curiosity about transformative trends challenging the status.</p></li>
+            <li><p>012345678</p></li>
+            <li><p>Call Us Anytime</p></li>
+            <li><button type="button">Get Free Estimate</button></li>
+        </ul>
+        </section>
+        <section>
+            <h2></h2>
+            <ul>
+                    <li><h2>Lisa Clairton</h2></li>
+                    <li><p>New York, USA</p></li>
+                    <li><p>We selected Interno interior because of rigorous design background & education.</p></li>
+            </ul>
+            <ul>
+                    <li><h2>David Knight</h2></li>
+                    <li><p>Sydney, Australia</p></li>
+                    <li><p>The team exceeded our expectations and emerged as leaders of our project’s.</p></li>
+            </ul>
+            <ul>
+                    <li><h2>Lisa Clairton</h2></li>
+                    <li><p>Paris, France</p></li>
+                    <li><p>They balanced the architectural vision and the project realities beautifully.</p></li>
+            </ul>
+        </section>
+
     </main>
 </body>
 </html>
