--- a/index.html
+++ b/index.html
@@ -5,25 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Interno</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css" integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Jost:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <header>
-        <a href="Interno"></a>
+        <img src="./img/interno.png" alt="Interno">
         <nav>
             <ul>
-                <li><a href="Home"></a></li>
-                <li><a href="About Us"></a></li>
-                <li><a href="Services"></a></li>
-                <li><a href="Pages"></a></li>
-                <li><a href="Contact Us"></a></li>
+                <li><a href="./index.html"></a>Home</li>
+                <li><a href="#"></a>About Us</li>
+                <li><a href="#"></a>Services</li>
+                <li><a href="#"></a>Pages</li>
+                <li><a href="#"></a>Contact Us</li>
             </ul>
         </nav>
     </header>
     <main>
         <section>
-        </ul>
+        <ul>
         <li><h1>Let's Create Your Dream Interior</h1></li>
          <li><p>The world needs innovators and problem solvers who turn</p></li>
          <li><p>challenges into greater opportunities.</p></li>
@@ -58,7 +61,8 @@
         </ul>
         </section>
         <section>
-            <h2></h2>
+            <h2>What the People Thinks</h2>
+            <h2>About Interno</h2>
             <ul>
                     <li><h2>Lisa Clairton</h2></li>
                     <li><p>New York, USA</p></li>
@@ -75,7 +79,149 @@
                     <li><p>They balanced the architectural vision and the project realities beautifully.</p></li>
             </ul>
         </section>
-
+        <section>
+            <ul>
+                <li><img src="./img/modernhome.png" alt="Modern Home"></li>
+                <li><img src="./img/stylevintageinterior.png" alt="Stylevintage Interior"></li>
+                <li><img src="./img/brand.png" alt="Brand"></li>
+                <li><img src="./img/naturehome.png" alt="Nature Home"></li>
+                <li><img src="./img/classicdesignstudio.png" alt="Classic Design Studio"></li>
+            </ul>
+        </section>
+        <section>
+            <h2>Recent Projects</h2>
+            <p>With tools to make every part of your process more human and a support team</p>
+            <p>excited to help you, getting started with us never been easier.</p>
+            <ul>
+                <li><img src="./img/winerydrycreek.png" alt="Winery Dry Creek"></li>
+                <li><h3>Winery Dry Creek Building</h3></li>
+                <li><p>Art Modern</p></li>
+                <li><button type="button">&#8250;</button></li>
+            </ul>
+            <ul>
+                <li><img src="./img/workplace.png" alt="Workplace"></li>
+                <li><h3>Creative Workplace Design</h3></li>
+                <li><p>Minimalist</p></li>
+                <li><button type="button">&#8250;</button></li>
+            </ul>
+            <ul>
+                <li><img src="./img/bedroominterior.png" alt="Bedroom"></li>
+                <li><h3>Bedroom Interior Pot Work</h3></li>
+                <li><p>Modern</p></li>
+                <li><button type="button">&#8250;</button></li>
+            </ul>
+            <ul>
+                <li><img src="./img/lightambiencesepia.png" alt="Light Ambience Sepia"></li>
+                <li><h3>Light Ambience Sepia Design</h3></li>
+                <li><p>Scandinavian</p></li>
+                <li><button type="button">&#8250;</button></li>
+            </ul>
+        </section>
+        <section>
+            <ul>
+                <li><h2>12</h2></li>
+                <li><p>Years Of Experiance</p></li>
+            </ul>
+            <ul>
+                <li><h2>5K</h2></li>
+                <li><p>Success Project</p></li>
+            </ul>
+            <ul>
+                <li><h2>1K</h2></li>
+                <li><p>Active Project</p></li>
+            </ul>
+            <ul>
+                <li><h2>4K</h2></li>
+                <li><p>Happy Customers</p></li>
+            </ul>
+        </section>
+        <section>
+            <h2>Recent Blogs</h2>
+            <p>Get updates about our latest trends and techniques used in</p>
+            <p>interior design project works.</p>
+            <ul>
+                <li><p>Kitchen Design</p></li>
+                <li><h3>Residential Interior Designer In New York, USA</h3></li>
+                <li><p>November 23, 2021</p></li>
+                <li><button type="button">&#8250;</button></li>
+            </ul>
+            <ul>
+                <li><p>Living Room</p></li>
+                <li><h3>How To Choose The Best Wall Art & Decor House?</h3></li>
+                <li><p>November 23, 2021</p></li>
+                <li><button type="button">&#8250;</button></li>
+            </ul>
+            <ul>
+                <li><p>Minimalist Interior</p></li>
+                <li><h3>Tips To Increase The Interior Value Of Your House</h3></li>
+                <li><p>November 23, 2021</p></li>
+                <li><button type="button">&#8250;</button></li>
+            </ul>
+            <ul>
+                <li><p>Kitchen Design</p></li>
+                <li><h3>Best Solution For Any Office & Business Interior</h3></li>
+                <li><p>November 23, 2021</p></li>
+                <li><button type="button">&#8250;</button></li>
+            </ul>
+            <ul>
+                <li><p>Living Room</p></li>
+                <li><h3>Get Solution For Building Construction Work</h3></li>
+                <li><p>November 23, 2021</p></li>
+                <li><button type="button">&#8250;</button></li>
+            </ul>
+            <ul>
+                <li><p>Minimalist Interior</p></li>
+                <li><h3>Attain The Best Finish For The Kitchen Cabinets</h3></li>
+                <li><p>November 23, 2021</p></li>
+                <li><button type="button">&#8250;</button></li>
+            </ul>
+        </section>
+        <section>
+            <ul>
+                <li><h2>Wanna join the interno?</h2></li>
+                <li><p>Contact Us & Get a Free Consultation</p></li>
+                <li><button type="button">Connect With us &#8250;</button></li>
+            </ul>
+        </section>
+        <section>
+            <ul>
+                    <li><img src="./img/interno.png" alt="Interno"></li>
+                    <li><p>We are the leading architect and interior design firm in the world.</p></li>
+                    <li>
+                <ul>
+                    <li><img src="./img/facebook.png" alt="Facebook"></li>
+                    <li><img src="./img/twitter.png" alt="Twitter"></li>
+                    <li><img src="./img/linkedln.png" alt="Linkedln"></li>
+                    <li><img src="./img/instagram.png" alt="Instagram"></li>
+                </ul>
+            </li>
+            </ul>
+            <ul>
+                <li><h2>Pages</h2></li>
+                <li><p>Style Guide</p></li>
+                <li><p>Protected</p></li>
+                <li><p>Licenses</p></li>
+                <li><p>Changelog</p></li>
+                <li><p>404</p></li>
+            </ul>
+            <ul>
+                <li><h2>Explore</h2></li>
+                <li><p>About Us</p></li>
+                <li><p>Recent Blog</p></li>
+                <li><p>Pricing Plan</p></li>
+                <li><p>Our Projects</p></li>
+                <li><p>Contact Us</p></li>
+            </ul>
+            <ul>
+                <li><h2>Contact</h2></li>
+                <li><p>53, East Birchwood Ave. Brooklyn, New York 11201, USA.</p></li>
+                <li><p>contact@interno.com</p></li>
+                <li><p>(123) 456 - 7890</p></li>
+            </ul>
+        </section>
     </main>
+    <footer>
+        <h2>Copyright &#169; Interno &#124; Designed by <span>Victorflow</span> Templates - Powered by <span>Webflow</span></h2>
+    </footer>
 </body>
 </html>
