--- a/index.html
+++ b/index.html
@@ -43,34 +43,14 @@
       <section>
         <h2>Interior Design</h2>
         <ul>
-          <li>
-            <p>
-              Enhancing the interior to achieve a healthier environment for the
-              people using right space.
-            </p>
-          </li>
-          <li><button type="button">View More</button></li>
-        </ul>
+        <li><p>Enhancing the interior to achieve a healthier environment for the people using right space.</p>
+        <button type="button">View More</button></li>
         <h2>Furniture</h2>
-        <ul>
-          <li>
-            <p>
-              Movable articles that are used to make a room or building suitable
-              for living or working.
-            </p>
-          </li>
-          <li><button type="button">View More</button></li>
-        </ul>
+        <li><p>Movable articles that are used to make a room or building suitable for living or working.</p>
+        <button type="button">View More</button></li>
         <h2>Flooring</h2>
-        <ul>
-          <li>
-            <p>
-              Thin object any finished material applied over a floor structure
-              to provide a walking surface.
-            </p>
-          </li>
-          <li><button type="button">View More</button></li>
-        </ul>
+        <li><p>Thin object any finished material applied over a floor structure to provide a walking surface.</p>
+        <button type="button">View More</button></li>
       </section>
       <section>
         <h2>We Tackle The Most Challenging Designs</h2>
@@ -90,52 +70,31 @@
         <h2>What the People Thinks</h2>
         <h2>About Interno</h2>
         <ul>
-          <li><h2>Lisa Clairton</h2></li>
-          <li><p>New York, USA</p></li>
           <li>
-            <p>
-              We selected Interno interior because of rigorous design background
-              & education.
-            </p>
-          </li>
-        </ul>
-        <ul>
-          <li><h2>David Knight</h2></li>
-          <li><p>Sydney, Australia</p></li>
+            <h2>Lisa Clairton</h2>
+            <p>New York, USA</p>
+            <p>We selected Interno interior because of rigorous design background
+              & education.</p></li>
           <li>
-            <p>
-              The team exceeded our expectations and emerged as leaders of our
-              project’s.
-            </p>
-          </li>
-        </ul>
-        <ul>
-          <li><h2>Lisa Clairton</h2></li>
-          <li><p>Paris, France</p></li>
+            <h2>David Knight</h2>
+            <p>Sydney, Australia</p>
+            <p>The team exceeded our expectations and emerged as leaders of our
+              project’s.</p></li>
           <li>
-            <p>
-              They balanced the architectural vision and the project realities
-              beautifully.
-            </p>
-          </li>
+            <h2>Lisa Clairton</h2>
+            <p>Paris, France</p>
+            <p>They balanced the architectural vision and the project realities
+              beautifully.</p></li>
         </ul>
       </section>
       <section>
         <ul>
-          <li><img src="./img/modernhome.png" alt="Modern Home" /></li>
           <li>
-            <img
-              src="./img/stylevintageinterior.png"
-              alt="Stylevintage Interior"
-            />
-          </li>
-          <li><img src="./img/brand.png" alt="Brand" /></li>
-          <li><img src="./img/naturehome.png" alt="Nature Home" /></li>
-          <li>
-            <img
-              src="./img/classicdesignstudio.png"
-              alt="Classic Design Studio"
-            />
+            <a href="#"><img src="./img/modernhome.png" alt="Modern Home" /></a>
+            <a href="#"><img src="./img/stylevintageinterior.png" alt="Stylevintage Interior"/></a>
+            <a href="#"><img src="./img/brand.png" alt="Brand" /></a>
+            <a href="#"><img src="./img/naturehome.png" alt="Nature Home" /></a>
+            <a href="#"><img src="./img/classicdesignstudio.png" alt="Classic Design Studio"/></a>
           </li>
         </ul>
       </section>
@@ -147,51 +106,34 @@
         </p>
         <p>excited to help you, getting started with us never been easier.</p>
         <ul>
-          <li><img src="./img/winerydrycreek.png" alt="Winery Dry Creek" /></li>
-          <li><h3>Winery Dry Creek Building</h3></li>
-          <li><p>Art Modern</p></li>
-          <li><button type="button">&#8250;</button></li>
-        </ul>
-        <ul>
-          <li><img src="./img/workplace.png" alt="Workplace" /></li>
-          <li><h3>Creative Workplace Design</h3></li>
-          <li><p>Minimalist</p></li>
-          <li><button type="button">&#8250;</button></li>
-        </ul>
-        <ul>
-          <li><img src="./img/bedroominterior.png" alt="Bedroom" /></li>
-          <li><h3>Bedroom Interior Pot Work</h3></li>
-          <li><p>Modern</p></li>
-          <li><button type="button">&#8250;</button></li>
-        </ul>
-        <ul>
-          <li>
-            <img
-              src="./img/lightambiencesepia.png"
-              alt="Light Ambience Sepia"
-            />
-          </li>
-          <li><h3>Light Ambience Sepia Design</h3></li>
-          <li><p>Scandinavian</p></li>
-          <li><button type="button">&#8250;</button></li>
+          <li><img src="./img/winerydrycreek.png" alt="Winery Dry Creek" />
+          <h3>Winery Dry Creek Building</h3>
+          <p>Art Modern</p>
+          <button type="button">&#8250;</button></li>
+          <li><img src="./img/workplace.png" alt="Workplace" />
+          <h3>Creative Workplace Design</h3>
+          <p>Minimalist</p>
+          <button type="button">&#8250;</button></li>
+          <li><img src="./img/bedroominterior.png" alt="Bedroom" />
+          <h3>Bedroom Interior Pot Work</h3>
+          <p>Modern</p>
+          <button type="button">&#8250;</button></li>
+          <li><img src="./img/lightambiencesepia.png" alt="Light Ambience Sepia"/>
+          <h3>Light Ambience Sepia Design</h3>
+          <p>Scandinavian</p>
+          <button type="button">&#8250;</button></li>
         </ul>
       </section>
       <section>
         <ul>
-          <li><h2>12</h2></li>
-          <li><p>Years Of Experiance</p></li>
-        </ul>
-        <ul>
-          <li><h2>5K</h2></li>
-          <li><p>Success Project</p></li>
-        </ul>
-        <ul>
-          <li><h2>1K</h2></li>
-          <li><p>Active Project</p></li>
-        </ul>
-        <ul>
-          <li><h2>4K</h2></li>
-          <li><p>Happy Customers</p></li>
+          <li><h2>12</h2>
+          <p>Years Of Experiance</p></li>
+          <li><h2>5K</h2>
+          <p>Success Project</p></li>
+          <li><h2>1K</h2>
+          <p>Active Project</p></li>
+          <li><h2>4K</h2>
+          <p>Happy Customers</p></li>
         </ul>
       </section>
       <section>
@@ -199,90 +141,86 @@
         <p>Get updates about our latest trends and techniques used in</p>
         <p>interior design project works.</p>
         <ul>
-          <li><p>Kitchen Design</p></li>
-          <li><h3>Residential Interior Designer In New York, USA</h3></li>
-          <li><p>November 23, 2021</p></li>
-          <li><button type="button">&#8250;</button></li>
-        </ul>
-        <ul>
-          <li><p>Living Room</p></li>
-          <li><h3>How To Choose The Best Wall Art & Decor House?</h3></li>
-          <li><p>November 23, 2021</p></li>
-          <li><button type="button">&#8250;</button></li>
-        </ul>
-        <ul>
-          <li><p>Minimalist Interior</p></li>
-          <li><h3>Tips To Increase The Interior Value Of Your House</h3></li>
-          <li><p>November 23, 2021</p></li>
-          <li><button type="button">&#8250;</button></li>
-        </ul>
-        <ul>
-          <li><p>Kitchen Design</p></li>
-          <li><h3>Best Solution For Any Office & Business Interior</h3></li>
-          <li><p>November 23, 2021</p></li>
-          <li><button type="button">&#8250;</button></li>
-        </ul>
-        <ul>
-          <li><p>Living Room</p></li>
-          <li><h3>Get Solution For Building Construction Work</h3></li>
-          <li><p>November 23, 2021</p></li>
-          <li><button type="button">&#8250;</button></li>
-        </ul>
-        <ul>
-          <li><p>Minimalist Interior</p></li>
-          <li><h3>Attain The Best Finish For The Kitchen Cabinets</h3></li>
-          <li><p>November 23, 2021</p></li>
-          <li><button type="button">&#8250;</button></li>
+          <li><p>Kitchen Design</p>
+          <h3>Residential Interior Designer In New York, USA</h3>
+          <p>November 23, 2021</p>
+          <button type="button">&#8250;</button></li>
+          <li><p>Living Room</p>
+          <h3>How To Choose The Best Wall Art & Decor House?</h3>
+          <p>November 23, 2021</p>
+          <button type="button">&#8250;</button></li>
+          <li><p>Minimalist Interior</p>
+          <h3>Tips To Increase The Interior Value Of Your House</h3>
+          <p>November 23, 2021</p>
+          <button type="button">&#8250;</button></li>
+          <li><p>Kitchen Design</p>
+          <h3>Best Solution For Any Office & Business Interior</h3>
+          <p>November 23, 2021</p>
+          <button type="button">&#8250;</button></li>
+          <li><p>Living Room</p>
+          <h3>Get Solution For Building Construction Work</h3>
+          <p>November 23, 2021</p>
+          <button type="button">&#8250;</button></li>
+          <li><p>Minimalist Interior</p>
+          <h3>Attain The Best Finish For The Kitchen Cabinets</h3>
+          <p>November 23, 2021</p>
+          <button type="button">&#8250;</button></li>
         </ul>
       </section>
       <section>
-        <ul>
-        <li><h2>Wanna join the interno?</h2></li>
-        <li><p>Contact Us & Get a Free Consultation</p></li>
-        <li><button type="button">Connect With us &#8250;</button></li>
-    </ul>
+        <h2>Wanna join the interno?</h2>
+        <p>Contact Us & Get a Free Consultation</p>
+        <button type="button">Connect With us &#8250;</button>
       </section>
-
+    </main>
+    <footer>
       <section>
         <img src="./img/interno.png" alt="Interno" />
         <p>
           We are the leading architect and interior design firm in the world.
         </p>
         <ul>
-          <li><img src="./img/facebook.png" alt="Facebook" /></li>
-          <li><img src="./img/twitter.png" alt="Twitter" /></li>
-          <li><img src="./img/linkedln.png" alt="Linkedln" /></li>
-          <li><img src="./img/instagram.png" alt="Instagram" /></li>
+          <li>
+            <img src="./img/facebook.png" alt="Facebook" />
+            <img src="./img/twitter.png" alt="Twitter" />
+            <img src="./img/linkedln.png" alt="Linkedln" />
+            <img src="./img/instagram.png" alt="Instagram" />
+          </li>
         </ul>
-        <h2>Pages</h2>
-        <ul>
-          <li><p>Style Guide</p></li>
-          <li><p>Protected</p></li>
-          <li><p>Licenses</p></li>
-          <li><p>Changelog</p></li>
-          <li><p>404</p></li>
+          <h2>Pages</h2>
+          <li>
+            <p>Style Guide</p>
+            <p>Protected</p>
+            <p>Licenses</p>
+            <p>Changelog</p>
+            <p>404</p>
+          </li>
         </ul>
-        <h2>Explore</h2>
-        <ul>
-          <li><p>About Us</p></li>
-          <li><p>Recent Blog</p></li>
-          <li><p>Pricing Plan</p></li>
-          <li><p>Our Projects</p></li>
-          <li><p>Contact Us</p></li>
+          <h2>Explore</h2>
+          <ul>
+          <li>
+            <p>About Us</p>
+            <p>Recent Blog</p>
+            <p>Pricing Plan</p>
+            <p>Our Projects</p>
+            <p>Contact Us</p>
+          </li>
         </ul>
-        <h2>Contact</h2>
-        <ul>
-          <li><p>53, East Birchwood Ave. Brooklyn, New York 11201, USA.</p></li>
-          <li><p>contact@interno.com</p></li>
-          <li><p>(123) 456 - 7890</p></li>
+          <h2>Contact</h2>
+          <ul>
+          <li>
+            <p>53, East Birchwood Ave. Brooklyn, New York 11201, USA.</p>
+            <p>contact@interno.com</p>
+            <p>(123) 456 - 7890</p>
+          </li>
         </ul>
       </section>
-    </main>
-    <footer>
+      <section>
       <h2>
         Copyright &#169; Interno &#124; Designed by
         <span>Victorflow</span> Templates - Powered by <span>Webflow</span>
       </h2>
+    </section>
     </footer>
   </body>
 </html>
