--- a/index.html
+++ b/index.html
@@ -41,16 +41,17 @@
         <button type="button">Get Started</button>
       </section>
       <section>
-        <h2>Interior Design</h2>
         <ul>
-        <li><p>Enhancing the interior to achieve a healthier environment for the people using right space.</p>
+        <li><h2>Interior Design</h2>
+        <p>Enhancing the interior to achieve a healthier environment for the people using right space.</p>
         <button type="button">View More</button></li>
-        <h2>Furniture</h2>
-        <li><p>Movable articles that are used to make a room or building suitable for living or working.</p>
+        <li><h2>Furniture</h2>
+        <p>Movable articles that are used to make a room or building suitable for living or working.</p>
         <button type="button">View More</button></li>
-        <h2>Flooring</h2>
-        <li><p>Thin object any finished material applied over a floor structure to provide a walking surface.</p>
+        <li><h2>Flooring</h2>
+        <p>Thin object any finished material applied over a floor structure to provide a walking surface.</p>
         <button type="button">View More</button></li>
+        </ul>
       </section>
       <section>
         <h2>We Tackle The Most Challenging Designs</h2>
@@ -188,6 +189,7 @@
           </li>
         </ul>
           <h2>Pages</h2>
+          <ul>
           <li>
             <p>Style Guide</p>
             <p>Protected</p>
