--- a/index.html
+++ b/index.html
@@ -90,13 +90,11 @@
       </section>
       <section>
         <ul>
-          <li>
-            <a href="#"><img src="./img/modernhome.png" alt="Modern Home" /></a>
-            <a href="#"><img src="./img/stylevintageinterior.png" alt="Stylevintage Interior"/></a>
-            <a href="#"><img src="./img/brand.png" alt="Brand" /></a>
-            <a href="#"><img src="./img/naturehome.png" alt="Nature Home" /></a>
-            <a href="#"><img src="./img/classicdesignstudio.png" alt="Classic Design Studio"/></a>
-          </li>
+            <li><a href="#"><img src="./img/modernhome.png" alt="Modern Home" /></a></li>
+            <li><a href="#"><img src="./img/stylevintageinterior.png" alt="Stylevintage Interior"/></a></li>
+            <li><a href="#"><img src="./img/brand.png" alt="Brand" /></a></li>
+            <li><a href="#"><img src="./img/naturehome.png" alt="Nature Home" /></a></li>
+            <li><a href="#"><img src="./img/classicdesignstudio.png" alt="Classic Design Studio"/></a></li>
         </ul>
       </section>
       <section>
