--- a/index.html
+++ b/index.html
@@ -21,118 +21,218 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <header>
-      <a href="./index.html"><img src="./img/interno.png" alt="Interno" /></a>
-      <nav>
-        <ul>
-          <li><a href="./index.html"></a>Home</li>
-          <li><a href="#"></a>About Us</li>
-          <li><a href="#"></a>Services</li>
-          <li><a href="#"></a>Pages</li>
-          <li><a href="#"></a>Contact Us</li>
+    <header class="header">
+      <a class="link" href="./index.html"
+        ><img class="logo-link" src="./img/interno.png" alt="Interno"
+      /></a>
+      <nav class="header-nav">
+        <ul class="nav-list">
+          <li class="nav-item">
+            <a class="nav-link" href="./index.html"></a>Home
+          </li>
+          <li class="nav-item"><a class="nav-link" href="#"></a>About Us</li>
+          <li class="nav-item"><a class="nav-link" href="#"></a>Services</li>
+          <li class="nav-item"><a class="nav-link" href="#"></a>Pages</li>
+          <li class="nav-item"><a class="nav-link" href="#"></a>Contact Us</li>
         </ul>
       </nav>
     </header>
-    <main>
-      <section>
-        <h1>Let's Create Your Dream Interior</h1>
-        <p>The world needs innovators and problem solvers who turn</p>
-        <p>challenges into greater opportunities.</p>
-        <button type="button">Get Started</button>
+    <main class="main">
+      <section class="hero">
+        <h1 class="hero-title">Let's Create Your Dream Interior</h1>
+        <p class="hero-text">
+          The world needs innovators and problem solvers who turn
+        </p>
+        <p class="hero-text">challenges into greater opportunities.</p>
+        <button type="button" class="hero-button">Get Started</button>
       </section>
-      <section>
-        <ul>
-        <li><h2>Interior Design</h2>
-        <p>Enhancing the interior to achieve a healthier environment for the people using right space.</p>
-        <button type="button">View More</button></li>
-        <li><h2>Furniture</h2>
-        <p>Movable articles that are used to make a room or building suitable for living or working.</p>
-        <button type="button">View More</button></li>
-        <li><h2>Flooring</h2>
-        <p>Thin object any finished material applied over a floor structure to provide a walking surface.</p>
-        <button type="button">View More</button></li>
+      <section class="information">
+        <ul class="information-list">
+          <li class="information-item">
+            <h2 class="information-title">Interior Design</h2>
+            <p class="information-text">
+              Enhancing the interior to achieve a healthier environment for the
+              people using right space.
+            </p>
+            <button type="button" class="information-button">View More</button>
+          </li>
+          <li class="information-item">
+            <h2 class="information-title">Furniture</h2>
+            <p class="information-text">
+              Movable articles that are used to make a room or building suitable
+              for living or working.
+            </p>
+            <button type="button" class="information-button">View More</button>
+          </li>
+          <li class="information-item">
+            <h2 class="information-title">Flooring</h2>
+            <p class="information-text">
+              Thin object any finished material applied over a floor structure
+              to provide a walking surface.
+            </p>
+            <button type="button" class="information-button">View More</button>
+          </li>
         </ul>
       </section>
-      <section>
-        <h2>We Tackle The Most Challenging Designs</h2>
-        <p>
+      <section class="recommendation">
+        <h2 class="recommendation-title">
+          We Tackle The Most Challenging Designs
+        </h2>
+        <p class="recommendation-text">
           The world needs innovators and problem solvers who turn challenges
           into greater opportunities. We have
         </p>
-        <p>
+        <p class="recommendation-text">
           an insatiable curiosity about transformative trends challenging the
           status.
         </p>
-        <p>012345678</p>
-        <p>Call Us Anytime</p>
-        <button type="button">Get Free Estimate</button>
+        <p class="recommendation-world">012345678</p>
+        <p class="recommendation-text">Call Us Anytime</p>
+        <button type="button" class="recommendation-button">
+          Get Free Estimate
+        </button>
       </section>
-      <section>
-        <h2>What the People Thinks</h2>
-        <h2>About Interno</h2>
-        <ul>
-          <li>
-            <h2>Lisa Clairton</h2>
-            <p>New York, USA</p>
-            <p>We selected Interno interior because of rigorous design background
-              & education.</p></li>
-          <li>
-            <h2>David Knight</h2>
-            <p>Sydney, Australia</p>
-            <p>The team exceeded our expectations and emerged as leaders of our
-              project’s.</p></li>
-          <li>
-            <h2>Lisa Clairton</h2>
-            <p>Paris, France</p>
-            <p>They balanced the architectural vision and the project realities
-              beautifully.</p></li>
+      <section class="review">
+        <h2 class="review-title">What the People Thinks</h2>
+        <h2 class="review-title">About Interno</h2>
+        <ul class="reviews-list">
+          <li class="reviews-item">
+            <h2 class="reviews-title">Lisa Clairton</h2>
+            <p class="reviews-text">New York, USA</p>
+            <p class="reviews-text">
+              We selected Interno interior because of rigorous design background
+              & education.
+            </p>
+          </li>
+          <li class="reviews-item">
+            <h2 class="reviews-title">David Knight</h2>
+            <p class="reviews-text">Sydney, Australia</p>
+            <p class="reviews-text">
+              The team exceeded our expectations and emerged as leaders of our
+              project’s.
+            </p>
+          </li>
+          <li class="reviews-item">
+            <h2 class="reviews-title">Lisa Clairton</h2>
+            <p class="reviews-text">Paris, France</p>
+            <p class="reviews-text">
+              They balanced the architectural vision and the project realities
+              beautifully.
+            </p>
+          </li>
         </ul>
       </section>
-      <section>
-        <ul>
-            <li><a href="#"><img src="./img/modernhome.png" alt="Modern Home" /></a></li>
-            <li><a href="#"><img src="./img/stylevintageinterior.png" alt="Stylevintage Interior"/></a></li>
-            <li><a href="#"><img src="./img/brand.png" alt="Brand" /></a></li>
-            <li><a href="#"><img src="./img/naturehome.png" alt="Nature Home" /></a></li>
-            <li><a href="#"><img src="./img/classicdesignstudio.png" alt="Classic Design Studio"/></a></li>
+      <section class="brands">
+        <ul class="brands-list">
+          <li class="brands-item">
+            <a href="#" class="brands-link"
+              ><img
+                src="./img/modernhome.png"
+                alt="Modern Home"
+                class="brands-img"
+            /></a>
+          </li>
+          <li class="brands-item">
+            <a href="#" class="brands-link"
+              ><img
+                src="./img/stylevintageinterior.png"
+                alt="Stylevintage Interior"
+                class="brands-img"
+            /></a>
+          </li>
+          <li class="brands-item">
+            <a href="#" class="brands-link"
+              ><img src="./img/brand.png" alt="Brand" class="brands-img"
+            /></a>
+          </li>
+          <li class="brands-item">
+            <a href="#" class="brands-link"
+              ><img
+                src="./img/naturehome.png"
+                alt="Nature Home"
+                class="brands-img"
+            /></a>
+          </li>
+          <li class="brands-item">
+            <a href="#" class="brands-link"
+              ><img
+                src="./img/classicdesignstudio.png"
+                alt="Classic Design Studio"
+                class="brands-img"
+            /></a>
+          </li>
         </ul>
       </section>
-      <section>
-        <h2>Recent Projects</h2>
-        <p>
+      <section class="projects">
+        <h2 class="project-title">Recent Projects</h2>
+        <p class="project-text">
           With tools to make every part of your process more human and a support
           team
         </p>
-        <p>excited to help you, getting started with us never been easier.</p>
-        <ul>
-          <li><img src="./img/winerydrycreek.png" alt="Winery Dry Creek" />
-          <h3>Winery Dry Creek Building</h3>
-          <p>Art Modern</p>
-          <button type="button">&#8250;</button></li>
-          <li><img src="./img/workplace.png" alt="Workplace" />
-          <h3>Creative Workplace Design</h3>
-          <p>Minimalist</p>
-          <button type="button">&#8250;</button></li>
-          <li><img src="./img/bedroominterior.png" alt="Bedroom" />
-          <h3>Bedroom Interior Pot Work</h3>
-          <p>Modern</p>
-          <button type="button">&#8250;</button></li>
-          <li><img src="./img/lightambiencesepia.png" alt="Light Ambience Sepia"/>
-          <h3>Light Ambience Sepia Design</h3>
-          <p>Scandinavian</p>
-          <button type="button">&#8250;</button></li>
+        <p class="project-text">
+          excited to help you, getting started with us never been easier.
+        </p>
+        <ul class="projects-list">
+          <li class="projects-item">
+            <img
+              src="./img/winerydrycreek.png"
+              alt="Winery Dry Creek"
+              class="projects-img"
+            />
+            <h3 class="projects-title">Winery Dry Creek Building</h3>
+            <p class="projects-text">Art Modern</p>
+            <button type="button" class="projects-button">&#8250;</button>
+          </li>
+          <li class="projects-item">
+            <img
+              src="./img/workplace.png"
+              alt="Workplace"
+              class="projects-img"
+            />
+            <h3 class="projects-title">Creative Workplace Design</h3>
+            <p class="projects-text">Minimalist</p>
+            <button type="button" class="projects-button">&#8250;</button>
+          </li>
+          <li class="projects-item">
+            <img
+              src="./img/bedroominterior.png"
+              alt="Bedroom"
+              class="projects-img"
+            />
+            <h3 class="projects-title">Bedroom Interior Pot Work</h3>
+            <p class="projects-text">Modern</p>
+            <button type="button" class="projects-button">&#8250;</button>
+          </li>
+          <li class="projects-item">
+            <img
+              src="./img/lightambiencesepia.png"
+              alt="Light Ambience Sepia"
+              class="projects-img"
+            />
+            <h3 class="projects-title">Light Ambience Sepia Design</h3>
+            <p class="projects-text">Scandinavian</p>
+            <button type="button" class="projects-button">&#8250;</button>
+          </li>
         </ul>
       </section>
-      <section>
-        <ul>
-          <li><h2>12</h2>
-          <p>Years Of Experiance</p></li>
-          <li><h2>5K</h2>
-          <p>Success Project</p></li>
-          <li><h2>1K</h2>
-          <p>Active Project</p></li>
-          <li><h2>4K</h2>
-          <p>Happy Customers</p></li>
+      <section class="statistics">
+        <ul class="statistics-list">
+          <li class="statistics-item">
+            <h2 class="statistics-title">12</h2>
+            <p class="statistics-text">Years Of Experiance</p>
+          </li>
+          <li class="statistics-item">
+            <h2 class="statistics-title">5K</h2>
+            <p class="statistics-text">Success Project</p>
+          </li>
+          <li class="statistics-item">
+            <h2 class="statistics-title">1K</h2>
+            <p class="statistics-text">Active Project</p>
+          </li>
+          <li class="statistics-item">
+            <h2 class="statistics-title">4K</h2>
+            <p class="statistics-text">Happy Customers</p>
+          </li>
         </ul>
       </section>
       <section>
@@ -140,30 +240,42 @@
         <p>Get updates about our latest trends and techniques used in</p>
         <p>interior design project works.</p>
         <ul>
-          <li><p>Kitchen Design</p>
-          <h3>Residential Interior Designer In New York, USA</h3>
-          <p>November 23, 2021</p>
-          <button type="button">&#8250;</button></li>
-          <li><p>Living Room</p>
-          <h3>How To Choose The Best Wall Art & Decor House?</h3>
-          <p>November 23, 2021</p>
-          <button type="button">&#8250;</button></li>
-          <li><p>Minimalist Interior</p>
-          <h3>Tips To Increase The Interior Value Of Your House</h3>
-          <p>November 23, 2021</p>
-          <button type="button">&#8250;</button></li>
-          <li><p>Kitchen Design</p>
-          <h3>Best Solution For Any Office & Business Interior</h3>
-          <p>November 23, 2021</p>
-          <button type="button">&#8250;</button></li>
-          <li><p>Living Room</p>
-          <h3>Get Solution For Building Construction Work</h3>
-          <p>November 23, 2021</p>
-          <button type="button">&#8250;</button></li>
-          <li><p>Minimalist Interior</p>
-          <h3>Attain The Best Finish For The Kitchen Cabinets</h3>
-          <p>November 23, 2021</p>
-          <button type="button">&#8250;</button></li>
+          <li>
+            <p>Kitchen Design</p>
+            <h3>Residential Interior Designer In New York, USA</h3>
+            <p>November 23, 2021</p>
+            <button type="button">&#8250;</button>
+          </li>
+          <li>
+            <p>Living Room</p>
+            <h3>How To Choose The Best Wall Art & Decor House?</h3>
+            <p>November 23, 2021</p>
+            <button type="button">&#8250;</button>
+          </li>
+          <li>
+            <p>Minimalist Interior</p>
+            <h3>Tips To Increase The Interior Value Of Your House</h3>
+            <p>November 23, 2021</p>
+            <button type="button">&#8250;</button>
+          </li>
+          <li>
+            <p>Kitchen Design</p>
+            <h3>Best Solution For Any Office & Business Interior</h3>
+            <p>November 23, 2021</p>
+            <button type="button">&#8250;</button>
+          </li>
+          <li>
+            <p>Living Room</p>
+            <h3>Get Solution For Building Construction Work</h3>
+            <p>November 23, 2021</p>
+            <button type="button">&#8250;</button>
+          </li>
+          <li>
+            <p>Minimalist Interior</p>
+            <h3>Attain The Best Finish For The Kitchen Cabinets</h3>
+            <p>November 23, 2021</p>
+            <button type="button">&#8250;</button>
+          </li>
         </ul>
       </section>
       <section>
@@ -186,8 +298,8 @@
             <img src="./img/instagram.png" alt="Instagram" />
           </li>
         </ul>
-          <h2>Pages</h2>
-          <ul>
+        <h2>Pages</h2>
+        <ul>
           <li>
             <p>Style Guide</p>
             <p>Protected</p>
@@ -196,8 +308,8 @@
             <p>404</p>
           </li>
         </ul>
-          <h2>Explore</h2>
-          <ul>
+        <h2>Explore</h2>
+        <ul>
           <li>
             <p>About Us</p>
             <p>Recent Blog</p>
@@ -206,8 +318,8 @@
             <p>Contact Us</p>
           </li>
         </ul>
-          <h2>Contact</h2>
-          <ul>
+        <h2>Contact</h2>
+        <ul>
           <li>
             <p>53, East Birchwood Ave. Brooklyn, New York 11201, USA.</p>
             <p>contact@interno.com</p>
@@ -216,11 +328,11 @@
         </ul>
       </section>
       <section>
-      <h2>
-        Copyright &#169; Interno &#124; Designed by
-        <span>Victorflow</span> Templates - Powered by <span>Webflow</span>
-      </h2>
-    </section>
+        <h2>
+          Copyright &#169; Interno &#124; Designed by
+          <span>Victorflow</span> Templates - Powered by <span>Webflow</span>
+        </h2>
+      </section>
     </footer>
   </body>
 </html>
