--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
   </head>
   <body>
     <header class="header">
-      <a class="link" href="./index.html"
-        ><img class="logo-link" src="./img/interno.png" alt="Interno"
+      <a class="header-link" href="./index.html"
+        ><img class="logo-img" src="./img/interno.png" alt="Interno"
       /></a>
       <nav class="header-nav">
         <ul class="nav-list">
@@ -38,7 +38,7 @@
       </nav>
     </header>
     <main class="main">
-      <section class="hero">
+      <section class="main-hero">
         <h1 class="hero-title">Let's Create Your Dream Interior</h1>
         <p class="hero-text">
           The world needs innovators and problem solvers who turn
@@ -46,7 +46,7 @@
         <p class="hero-text">challenges into greater opportunities.</p>
         <button type="button" class="hero-button">Get Started</button>
       </section>
-      <section class="information">
+      <section class="main-information">
         <ul class="information-list">
           <li class="information-item">
             <h2 class="information-title">Interior Design</h2>
@@ -74,7 +74,7 @@
           </li>
         </ul>
       </section>
-      <section class="recommendation">
+      <section class="main-recommendation">
         <h2 class="recommendation-title">
           We Tackle The Most Challenging Designs
         </h2>
@@ -92,7 +92,7 @@
           Get Free Estimate
         </button>
       </section>
-      <section class="review">
+      <section class="main-review">
         <h2 class="review-title">What the People Thinks</h2>
         <h2 class="review-title">About Interno</h2>
         <ul class="reviews-list">
@@ -122,7 +122,7 @@
           </li>
         </ul>
       </section>
-      <section class="brands">
+      <section class="main-brands">
         <ul class="brands-list">
           <li class="brands-item">
             <a href="#" class="brands-link"
@@ -163,7 +163,7 @@
           </li>
         </ul>
       </section>
-      <section class="projects">
+      <section class="main-projects">
         <h2 class="project-title">Recent Projects</h2>
         <p class="project-text">
           With tools to make every part of your process more human and a support
@@ -215,7 +215,7 @@
           </li>
         </ul>
       </section>
-      <section class="statistics">
+      <section class="main-statistics">
         <ul class="statistics-list">
           <li class="statistics-item">
             <h2 class="statistics-title">12</h2>
@@ -235,102 +235,105 @@
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Recent Blogs</h2>
-        <p>Get updates about our latest trends and techniques used in</p>
-        <p>interior design project works.</p>
-        <ul>
-          <li>
-            <p>Kitchen Design</p>
-            <h3>Residential Interior Designer In New York, USA</h3>
-            <p>November 23, 2021</p>
-            <button type="button">&#8250;</button>
+      <section class="main-blogs">
+        <h2 class="blog-title">Recent Blogs</h2>
+        <p class="blog-text">Get updates about our latest trends and techniques used in</p>
+        <p class="blog-text">interior design project works.</p>
+        <ul class="blogs-list">
+          <li class="blogs-item">
+            <p class="blogs-text">Kitchen Design</p>
+            <h3 class="blogs-title">Residential Interior Designer In New York, USA</h3>
+            <p class="blogs-text">November 23, 2021</p>
+            <button type="button" class="blogs-button">&#8250;</button>
           </li>
-          <li>
-            <p>Living Room</p>
-            <h3>How To Choose The Best Wall Art & Decor House?</h3>
-            <p>November 23, 2021</p>
-            <button type="button">&#8250;</button>
+          <li class="blogs-item">
+            <p class="blogs-text">Living Room</p>
+            <h3 class="blogs-title">How To Choose The Best Wall Art & Decor House?</h3>
+            <p class="blogs-text">November 23, 2021</p>
+            <button type="button" class="blogs-button">&#8250;</button>
           </li>
-          <li>
-            <p>Minimalist Interior</p>
-            <h3>Tips To Increase The Interior Value Of Your House</h3>
-            <p>November 23, 2021</p>
-            <button type="button">&#8250;</button>
+          <li class="blogs-item">
+            <p class="blogs-text">Minimalist Interior</p>
+            <h3 class="blogs-title">Tips To Increase The Interior Value Of Your House</h3>
+            <p class="blogs-text">November 23, 2021</p>
+            <button type="button" class="blogs-button">&#8250;</button>
           </li>
-          <li>
-            <p>Kitchen Design</p>
-            <h3>Best Solution For Any Office & Business Interior</h3>
-            <p>November 23, 2021</p>
-            <button type="button">&#8250;</button>
+          <li class="blogs-item">
+            <p class="blogs-text">Kitchen Design</p>
+            <h3 class="blogs-title">Best Solution For Any Office & Business Interior</h3>
+            <p class="blogs-text">November 23, 2021</p>
+            <button type="button" class="blogs-button">&#8250;</button>
           </li>
-          <li>
-            <p>Living Room</p>
-            <h3>Get Solution For Building Construction Work</h3>
-            <p>November 23, 2021</p>
-            <button type="button">&#8250;</button>
+          <li class="blogs-item">
+            <p class="blogs-text">Living Room</p>
+            <h3 class="blogs-title">Get Solution For Building Construction Work</h3>
+            <p class="blogs-text">November 23, 2021</p>
+            <button type="button" class="blogs-button">&#8250;</button>
           </li>
-          <li>
-            <p>Minimalist Interior</p>
-            <h3>Attain The Best Finish For The Kitchen Cabinets</h3>
-            <p>November 23, 2021</p>
-            <button type="button">&#8250;</button>
+          <li class="blogs-item">
+            <p class="blogs-text">Minimalist Interior</p>
+            <h3 class="blogs-title">Attain The Best Finish For The Kitchen Cabinets</h3>
+            <p class="blogs-text">November 23, 2021</p>
+            <button type="button" class="blogs-button">&#8250;</button>
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Wanna join the interno?</h2>
-        <p>Contact Us & Get a Free Consultation</p>
-        <button type="button">Connect With us &#8250;</button>
+      <section class="main-consultation">
+        <h2 class="consultation-title">Wanna join the interno?</h2>
+        <p class="consultation-text">Contact Us & Get a Free Consultation</p>
+        <button type="button" class="consultation-button">Connect With us &#8250;</button>
       </section>
     </main>
-    <footer>
-      <section>
-        <img src="./img/interno.png" alt="Interno" />
-        <p>
+    <footer class="footer">
+      <section class="footer-gids">
+        <a class="footer-link" href="./index.html"
+        ><img class="logo-img" src="./img/interno.png" alt="Interno"/></a>
+        <p class="gid-text">
           We are the leading architect and interior design firm in the world.
         </p>
-        <ul>
-          <li>
-            <img src="./img/facebook.png" alt="Facebook" />
-            <img src="./img/twitter.png" alt="Twitter" />
-            <img src="./img/linkedln.png" alt="Linkedln" />
-            <img src="./img/instagram.png" alt="Instagram" />
+        <ul class="networks-list">
+          <li class="networks-item">
+            <a href="#" class="networks-link"><img src="./img/facebook.png" alt="Facebook" class="networks-img"/></a>
+            <a href="#" class="networks-link"><img src="./img/twitter.png" alt="Twitter" class="networks-img"/></a>
+            <a href="#" class="networks-link"><img src="./img/linkedln.png" alt="Linkedln"  class="networks-img"/></a>
+            <a href="#" class="networks-link"><img src="./img/instagram.png" alt="Instagram"  class="networks-img"/></a>
           </li>
         </ul>
-        <h2>Pages</h2>
-        <ul>
-          <li>
-            <p>Style Guide</p>
-            <p>Protected</p>
-            <p>Licenses</p>
-            <p>Changelog</p>
-            <p>404</p>
+        <h2 class="pages-title">Pages</h2>
+        <ul class="pages-list">
+          <li class="pages-item">
+            <p class="pages-text">Style Guide</p>
+            <p class="pages-text">Protected</p>
+            <p class="pages-text">Licenses</p>
+            <p class="pages-text">Changelog</p>
+            <p class="pages-text">404</p>
           </li>
         </ul>
-        <h2>Explore</h2>
-        <ul>
-          <li>
-            <p>About Us</p>
-            <p>Recent Blog</p>
-            <p>Pricing Plan</p>
-            <p>Our Projects</p>
-            <p>Contact Us</p>
+        <h2 class="explore-title">Explore</h2>
+        <ul class="explore-list">
+          <li class="explore-item">
+            <p class="explore-text">About Us</p>
+            <p class="explore-text">Recent Blog</p>
+            <p class="explore-text">Pricing Plan</p>
+            <p class="explore-text">Our Projects</p>
+            <p class="explore-text">Contact Us</p>
           </li>
         </ul>
-        <h2>Contact</h2>
-        <ul>
-          <li>
-            <p>53, East Birchwood Ave. Brooklyn, New York 11201, USA.</p>
-            <p>contact@interno.com</p>
-            <p>(123) 456 - 7890</p>
+        <h2 class="contact-title">Contact</h2>
+        <ul class="contact-list">
+          <li class="contact-item">
+            <address class="contact-address">
+            <a href="https://www.google.com/maps/search/53,+East+Birchwood+Ave.+Brooklyn,+New+York+11201,+USA.a/@40.8934966,-74.2924019,10z/data=!3m1!4b1?entry=ttu&g_ep=EgoyMDI0MTExMy4xIKXMDSoASAFQAw%3D%3D" class="contact-link">53, East Birchwood Ave. Brooklyn, New York 11201, USA.a</a>
+            <a href="mailto:contact@interno.com" class="contact-link">contact@interno.com</a>
+            <a href="tel:+1234567890" class="contact-link">(123) 456 - 7890</a>
+          </address>
           </li>
         </ul>
       </section>
-      <section>
-        <h2>
+      <section class="footer-copyright">
+        <h2 class="copyright-title">
           Copyright &#169; Interno &#124; Designed by
-          <span>Victorflow</span> Templates - Powered by <span>Webflow</span>
+          <span class="copyright-span">Victorflow</span> Templates - Powered by <span class="copyright-span">Webflow</span>
         </h2>
       </section>
     </footer>
